cluster/apps/stable-diffusion-webui/sd-webui-docker/bases/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stable-diffusion-webui
spec:
  serviceName: stable-diffusion-webui
  replicas: 1
  selector:
    matchLabels:
      app: stable-diffusion-webui
  template:
    metadata:
      labels:
        app: stable-diffusion-webui
    spec:
      containers:
        - name: stable-diffusion-webui
          image: sd-webui
          ports:
            - name: http
              containerPort: 7860
          volumeMounts:
            - name: datadir
              mountPath: /datadir
            - name: shared-embeddings
              mountPath: /datadir/embeddings
              readOnly: true
            - name: shared-extensions
              mountPath: /datadir/extensions
            - name: shared-models
              mountPath: /datadir/models
              readOnly: true
            - name: shared-outputs
              mountPath: /datadir/outputs
          args:
            - --api
              #- --xformers # assumes GPU mode
            - --skip-torch-cuda-test
            - --enable-insecure-extension-access
            - --no-half
            - --use-cpu=all
            - --disable-nan-check # this is required to use some models
            - --no-download-sd-model # models are downloaded by batches
            - --data-dir=/datadir
          livenessProbe:
            httpGet:
              path: /sdapi/v1/progress?skip_current_image=true
              port: 7860
            initialDelaySeconds: 300
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 1Gi
            limits:
              cpu: 4000m
              memory: 30Gi
      volumes:
        - name: shared-embeddings
          persistentVolumeClaim:
            claimName: nfs-aiml-pvc-embeddings
        - name: shared-extensions
          persistentVolumeClaim:
            claimName: nfs-aiml-pvc-extensions
        - name: shared-models
          persistentVolumeClaim:
            claimName: nfs-aiml-pvc-models
        - name: shared-outputs
          persistentVolumeClaim:
            claimName: nfs-aiml-pvc-outputs
  volumeClaimTemplates:
    - metadata:
        name: datadir
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
