cluster/apps/stable-diffusion-webui/sd-webui-docker/bases/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable-diffusion-webui
spec:
  rules:
    - host: "stable-diffusion.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stable-diffusion-webui
                port:
                  name: http
  tls:
    - hosts:
        - "stable-diffusion.${SECRET_DOMAIN}"
